# ai_indian_stock_suggestion_vibe

./: .env copy  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_flask_ui.py  template.py
ai_indian_stock_suggestion/backend/app/: config.py  flask_ui.py  main.py
ai_indian_stock_suggestion/backend/app/db/: mongodb.py
ai_indian_stock_suggestion/backend/app/models/: __init__.py  recommendation_state.py
ai_indian_stock_suggestion/backend/app/routes/: user_routes.py
ai_indian_stock_suggestion/backend/app/services/: recommendation_engine_service.py  user_creation_service.py
ai_indian_stock_suggestion/backend/app/services/agents/: Xfactor.yaml  __init__.py  agents_prompts.yaml  call_openai.py  json_completion.py  nse_quote.py  prompts_config.py  recommendation_agents.py  tavily_search.py
ai_indian_stock_suggestion/backend/app/static/css/: styles.css
ai_indian_stock_suggestion/backend/app/templates/: base.html  create_user.html  customer_last_requests.html  health.html  update_action.html
ai_indian_stock_suggestion/backend/app/utils/: logging_config.py
